src/App.css
.App {
    padding-top: 30px;
    padding-bottom: 30px;
}
  
.centered {
    display: flex;
    justify-content: center;
}

.react-datepicker__input-container {
    width: inherit;
}

.react-datepicker-wrapper {
    width: 100%;
}

.loading {
    position: fixed;
    z-index: 999;
    height: 2em;
    width: 2em;
    overflow: visible;
    margin: auto;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.question {
    font-weight: 500 ;
    color: #002e46;
}

